Aress7/src/objects/ServiceTerritoryMember.object
<CustomObject>
    <fields>
        <fullName>FSL__Internal_SLR_HomeAddress_Geolocation__c</fullName>
        <label>Internal SLR HomeAddress Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Travel_Group_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Group 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Group_2__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Travel Group 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Group_3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Travel Group 3</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FSL__Secondary_STM</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(TerritoryType, &quot;Secondary&quot;) &amp;&amp; 
    ( ( ( ISCHANGED(Longitude) || ISCHANGED(Latitude) ) &amp;&amp; ( (NOT(ISBLANK(Longitude))) || (NOT(ISBLANK(Latitude))) )) || 
      (NOT(ISBLANK(FSL__Internal_SLR_HomeAddress_Geolocation__Latitude__s))) || 
      (NOT(ISBLANK(FSL__Internal_SLR_HomeAddress_Geolocation__Longitude__s))) || 
      (NOT(ISBLANK( Street ))) || 
      (NOT(ISBLANK( City ))) ||
      (NOT(ISBLANK( Country ))) ||
      (NOT(ISBLANK( State ))) || 
      (NOT(ISBLANK(  PostalCode  )))
    )
 )</errorConditionFormula>
        <errorMessage>Cannot save Service Territory Member of type secondary with Operating Hours or Address</errorMessage>
    </validationRules>
</CustomObject>